--- a/PetShopLayeredArch/Views/_ViewImports.cshtml
+++ b/PetShopLayeredArch/Views/_ViewImports.cshtml
@@ -2,5 +2,7 @@
 @using PetShopLayeredArch.Models
 @using PetShop.MVC.Components.Header
 @using PetShop.BLL.DTOs.Bio
+@using PetShop.BLL.DTOs.BlogPost
+@using PetShop.MVC.Models
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
