--- a/PetShopLayeredArch/Views/Shared/Components/Header/Default.cshtml
+++ b/PetShopLayeredArch/Views/Shared/Components/Header/Default.cshtml
@@ -141,7 +141,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="blog.html" class="dropdown-item">
+                                    <a asp-controller="BlogPost" asp-action="Index" class="dropdown-item">
                                         Blog<span class="badge bg-success text-dark ms-2">PRO</span>
                                     </a>
                                 </li>
@@ -186,7 +186,7 @@
                             <a href="shop.html" class="nav-link">Shop</a>
                         </li>
                         <li class="nav-item">
-                            <a href="blog.html" class="nav-link">Blog</a>
+                            <a asp-controller="BlogPost" asp-action="Index" class="nav-link">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a href="contact.html" class="nav-link">Contact</a>
